[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/cenario/caixa_de_dialogo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CaixaDeDialogo.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 192, 128 )

[node name="CaixaDeDialogo" type="Node2D"]
script = ExtResource( 2 )
texto = "teste"
caixa = NodePath("CanvasLayer/PopupDialog")
linha = NodePath("CanvasLayer/PopupDialog/Label")

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer"]
margin_left = -1.0
margin_top = 40.0
margin_right = 512.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="CanvasLayer/PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = -29.5
margin_right = 255.5
margin_bottom = 29.5
align = 1
valign = 1
autowrap = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
